# middleware_cpp_crow

./: CMakeLists.txt  CMakePresets.json  main.cpp
.cache/clangd/index/: crow_all.h.29C1FFCC174A2AD1.idx  main.cpp.AE60B61816D9437B.idx
include/: crow_all.h  ticket_manager.hpp
src/: ticket_manager.cpp
